# taxi-demand-predictions

./: README.md  pyproject.toml
data/processed/: ts_data_2023_01.parquet
notebooks/: 01_load_and_validate_raw_data.ipynb  02_transform_raw_data_into_time_series.ipynb  03_transform_time_series_into_features_targets.ipynb  04_transform_raw_data_into_features_and_targets.ipynb
src/: data.py  paths.py
