[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Miguel GP"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.2"
jupyter = "^1.0.0"
requests = "^2.31.0"
pandas = "^2.2.1"
pyarrow = "^15.0.0"
fastparquet = "^2024.2.0"
tqdm = "^4.66.2"
plotly = "^5.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
